[UTF-8][Japanese]

*Ver3.24 : 2019/05/30

-[https://bookmark.hatenastaff.com/entry/2019/05/28/141208:はてなブックマークの常時SSL化]に伴い、はてなブックマークへのリンクを https に変更。
-RFC7231に準拠し、リダイレクトを相対パスで出力するよう変更。
-【fix】トップページの2ページ目で「前のページ」のリンクが正しくない。（[https://adiary.adiary.jp/0409#com:Thanks to sabazo]）

*Ver3.23 : 2019/03/12

-Pocketのシェア数が取得できなくなっていたので取得機能を削除しました。((query.yahooapis.com が突然サービス終了したため))
-デフォルトアイコンとデフォルトロゴを変更しました。
-静的HTML出力が無効のとき、管理者以外にはエラーメッセージを表示しないように変更。
-管理メニューの流れを少し改善しました。
-記事編集画面でファイルアップロードの進捗を表示するよう変更。
-アルバムと記事編集画面のファイル選択ボタンのデザインを変更。
-【アルバム】アップロード中の進捗を表示するように変更。
-【アルバム】ファイルリネーム時に、画像以外はサムネイルを再生成するよう変更。
-【アルバム】ファイルリネーム時に del キーが使用できない。
-【httpd/EXE】Socket を STDIN に接続するのを止め、若干高速化しました。
-【httpd/EXE】index.htmlを有効化しました。
-【httpd/EXE】大きいファイルをダウンロードする場合、すべてメモリに展開しないようにしました。
-【adiary.conf.cgi.sample】大きいファイルはテンポラリに書き出すよう変更。
-【adiary.conf.cgi.sample】{<$Form_options.multipart_use_temp>}を{<$Form_options.use_temp_flag>}に変更。((ディレクトリ名を設定するのかフラグを設定するのか非常にわかりにくく、自分でハマってしまったので……。))
-【plugin】非公開コメントにヘルプを出せる機能を追加。
-【Fix/plugin】Twitter通知プラグイン。2018/06/13以降、新規認証に失敗していた。
-【Fix/Ver3.20-】デザイン編集時に、ヘッダが常に標準のまま（非カスタム状態で）出力されてしまう。
-【Fix】稀に最初のファイルアップロードに失敗することがある。
-【Fix】静的出力時、ヘッダにゴミが出力される。
-【Fix】致命的エラーメッセージ（初期ディレクトリ作成失敗）がきちんと表示されない。
-【Fix】大きなファイルを送信されたとき、{<$Form_options.multipart_use_temp_dir>}を設定していても、すべてメモリに展開していた。((multipart_use_temp_dirを設定していない場合、無条件にメモリに展開します。))
-【Fix】テンポラリとして /tmp などパーティションが異なるディレクトリを指定すると、アップロードに失敗する。
-【Fix】コメント欄でTABが入力できないことがある。
-【Security/httpd/EXE】HTTP_HOSTヘッダにタグを挿入可能だった。((RSS以外に展開されることはないので、実害はあまりない。))
-【Security】HTTP_HOSTヘッダに虚偽の設定をした上でコメントを投稿するとRSSのホスト名部分を外部から書き換えられてしまう。((Hostヘッダインジェクションと呼ばれる攻撃です。一般的なレンタルサーバでは VirtualHost と呼ばれる設定を使用しているため問題ありません。))
-他

*Ver3.22 : 2019/02/15

-【Fix】sitemapプラグインが動かない。
-【Fix】AMPプラグインにCSSが適用されない。
-【Fix】mod_perl2環境で動作が不安定。
-【Fix】インポート等のセッション画面表示がおかしい。
-【httpd/EXE】コードを若干変更。

*Ver3.21b : 2019/02/12

-内部処理を見直し、2%-5%程度処理を高速化しました。
-起動時のパス解析を更新しました。
-静的出力（エクスポート）機能を更新しました。
-テーマ選択画面を少し見やすくしました。